theme8/theme8.css
/* ... */
.likereblog a { padding: 0.75em }
.showtags { cursor: pointer }
/* Like button */
.customlike { position: relative }
.customlike .like_button.liked + i::before { content: "\eb03" }
.customlike iframe {
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	z-index: 1;
	opacity: 0;
}



/********************************* POST TYPES ********************************/
/* TODO */



/******************************* MEDIA QUERIES *******************************/
@media (min-width: 70em) {
	/* Tapes (title, nav) */
	#left {
		position: fixed;
		top: 0;
		left: 1.5em;
		height: 100vh;
		width: 7em;
		z-index: 5;
	}
	#title {
		width: 100vh;
		transform: rotate(-90deg);
		transform-origin: bottom left;
		position: absolute; 
		bottom: 1em;
		left: calc(50% + 1em);
		overflow: hidden;
		white-space: nowrap;
	}
	#avatar { left: 65% }
	#tapes {
		position: fixed;
		bottom: -1em;
		right: 1.5em;
		flex-direction: row-reverse;
		z-index: 5;
	}
	.tape { margin-left: 0.75em; width: 3em; }
	button.tape { writing-mode: vertical-rl }
	.tape[data-page]:hover { transform: translateY(-1em) }
	/* Step down */
	.tape[data-page*='posts'] { height: 85vh }
	.tape[data-page*='about'], nav.tape { height: 71vh }
	.tape.nav { height: 57vh }
	/* Labels */
	.tape span {
		width: 100%;
		height: fit-content;
		padding: 1em 0.5em 0;
	}
	.tape span::after {
		width: 100%;
		height: 1.75em;
		top: 100%;
		left: 0;
		background-image: conic-gradient(at 50% 85%, var(--color) 15%, transparent 15% 85%, var(--color) 85%);
	}
	.tape.active span::after {
		background-image: conic-gradient(at 50% 85%, var(--color) 15%, transparent 15% 85%, var(--color) 85%), conic-gradient(at 50% 100%, var(--highlight) 15%, transparent 15% 85%, var(--highlight) 85%);
	}
	/* Icon about */
	nav.tape span {
		flex-direction: column;
		padding-top: 0.5em;
	}
	/* Sticker */
	.sticker {
		bottom: 2em;
		left: -5.5em;
		max-height: 10rem;
		max-width: 10rem;
	}
	
	/* Layout */
 	body {
		height: 100%;
		display: grid;
		justify-items: center;
		align-items: center;
		width: calc(100% - 14em - 22em);
		margin-left: 14em;
	}
	#main > section { max-height: 100vh }
	#posts { padding-top: 3em }
	.post .title { margin: 0 -0.75em }
	/* Scroll to top/palette toggle/credit buttons */
	#buttons {
		bottom: 1em;
		left: 7.5em;
	}
	
	/* Pinned post label */
	#pinnedpost {
		margin: 0;
		position: absolute;
		left: 100%;
		top: 2.5em;
		border-radius: 0 var(--roundness) var(--roundness) 0;
	}
}
@media (max-width: 70em) {
	/* Tapes (title, nav) */
	#left {
		position: relative;
		margin: 1em 0;
	}
	#title {
		display: block;
		padding: 0.5em 6.5em 0.5em 1em;
	}
	#avatar {
		right: 1em;
		top: 50%;
		transform: translateY(-50%);
		--size: 4.5em;
	}
	#tapes {
		position: relative;
		right: -1em;
		flex-direction: column;
	}
	.tape[data-page]:hover { transform: translateX(-1em) }
	/* Step down */
	.tape { height: 3em }
	.tape + .tape { margin-top: 0.75em }
	.tape[data-page*='posts'] { width: 85vw }
	.tape[data-page*='about'], nav.tape { width: 71vw }
	.tape.nav { width: 57vw }
	/* Labels */
	.tape span {
		width: fit-content;
		height: 100%;
		padding: 0.5em 0 0.5em 1em;
	}
	.tape span::after {
		width: 1.75em;
		height: 100%;
		top: 0;
		left: 100%;
		background-image: conic-gradient(at 85% 50%, transparent 60%, var(--color) 60% 90%, transparent 90%);
	}
	.tape.active span::after {
		background-image: conic-gradient(at 85% 50%, transparent 60%, var(--color) 60% 90%, transparent 90%), conic-gradient(at 100% 50%, transparent 60%, var(--highlight) 60% 90%, transparent 90%);
	}
	/* Icon about */
	nav.tape span { padding-left: 0.5em }
	/* Sticker */
	.sticker {
		bottom: 0;
		left: 0;
		max-height: 7em;
		max-width: 23vw;
	}
	
	
	#main > section {
		top: 2em;
		padding: 0 0.5em;
	}
	.post .title { margin: 0 -0.2em }
	/* Scroll to top/palette toggle/credit buttons */
	#buttons {
		left: 0.5em;
		bottom: 0.5em;
	}
}
@media (max-width: 30em) {
	html { font-size: 14px }
}

